project(codebase)
cmake_minimum_required(VERSION 3.20)
set(CMAKE_CXX_STANDARD 20)
set(CMAKE_C_STANDARD 11)
#include(${CMAKE_BINARY_DIR}/conanbuildinfo.cmake)
#conan_basic_setup()
set(CMAKE_EXPORT_COMPILE_COMMANDS on)
#add_executable(main main.cpp sqlImpl.cpp)
#target_link_libraries(main ${CONAN_LIBS})
FIND_PACKAGE( Boost 1.40 COMPONENTS program_options REQUIRED )
INCLUDE_DIRECTORIES( ${Boost_INCLUDE_DIR} )
include_directories(src/include)
enable_testing()
add_subdirectory(src/utils)
add_subdirectory(src/frontend)
add_subdirectory(src/service)
add_subdirectory(src/test)